--- a/Stage.tex
+++ b/Stage.tex
@@ -6,6 +6,7 @@
 \usepackage{hyperref}
 \usepackage{xcolor}
 \usepackage{natbib}
+\usepackage{graphicx}
 
 \hypersetup{
   colorlinks=true,
@@ -348,6 +349,13 @@ Nous observons également les combinaisons telles que le premier verbe + la prem
 La présence de certains éléments particuliers peut aussi caractériser des constructions anaphoriques : le pronom \og \textit{lui} \fg{}, les déterminants possessifs à la 3\up{ème} personne du singulier, d'autres occurrences de \og \textit{il} \fg{}, etc. La présence d'acronymes ou de noms propres peut quant à elle suggérer l'existence d'un antécédent, donc le caractère anaphorique du pronom (nous n'implémentons pas ces deux éléments lors de nos expériences, car ils nécessitent une reconnaissance préalable des entités nommées).
 
 \color{black}
+
+\section{Cadre expérimental}
+
+\begin{figure}[!h]
+\centering
+  \includegraphics[scale=0.6]{etapes.png}
+\end{figure}
 
 \section*{Conclusion}
 
